:wrench: Feature Engineering added

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ ee~=0.2
 earthengine-api~=0.1.409
 geopandas~=0.14.4
 matplotlib~=3.9.1
+Cartopy~=0.23.0
+geemap~=0.32.1
+plotly~=5.22.0
+pandas~=2.2.2
+numpy~=1.26.4
