--- a/requirements.txt
+++ b/requirements.txt
@@ -1,216 +1,150 @@
-altair==5.3.0
-appnope==0.1.4
+alembic==1.13.2
+altair==5.4.1
 asttokens==2.4.1
-attrs==23.2.0
-backcall==0.2.0
+attrs==24.2.0
 beautifulsoup4==4.12.3
-bleach==6.1.0
-blessings==1.7
 blinker==1.8.2
 bqplot==0.12.43
 branca==0.7.2
-bs4==0.0.1
-cachetools==5.3.3
+bs4==0.0.2
+cachetools==5.5.0
 Cartopy==0.23.0
-certifi==2024.6.2
+certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
-click-plugins==1.1.1
-cligj==0.7.2
 cloudpickle==3.0.0
-colorcet==3.1.0
+colorlog==6.8.2
 colour==0.1.5
 comm==0.2.2
-contourpy==1.2.1
+contourpy==1.3.0
 cycler==0.12.1
-Cython==3.0.11
 decorator==5.1.1
-defusedxml==0.7.1
-descartes==1.1.0
-diskcache==5.6.3
-docopt==0.6.2
-dtreeviz==2.2.2
-earthengine-api==0.1.417
+earthengine-api==0.1.418
 eerepr==0.0.4
 entrypoints==0.4
-eomaps==8.2.1
-exceptiongroup==1.2.1
 executing==2.0.1
-Faker==26.0.0
-fastjsonschema==2.20.0
+Faker==28.0.0
 favicon==0.7.0
-fiona==1.9.6
-Flask==3.0.3
-folium==0.16.0
-fonttools==4.53.0
+folium==0.17.0
+fonttools==4.53.1
 future==1.0.0
 geemap==0.34.0
 geocoder==1.38.1
-geojson==3.1.0
-geopandas==0.14.4
-geos==0.2.3
-geosample==0.3.0
-geoviews==1.12.0
+geopandas==1.0.1
 gitdb==4.0.11
 GitPython==3.1.43
-google-api-core==2.19.1
-google-api-python-client==2.135.0
-google-auth==2.31.0
+google-api-core==2.19.2
+google-api-python-client==2.143.0
+google-auth==2.34.0
 google-auth-httplib2==0.2.0
 google-cloud-core==2.4.1
-google-cloud-storage==2.17.0
+google-cloud-storage==2.18.2
 google-crc32c==1.5.0
-google-resumable-media==2.7.1
-googleapis-common-protos==1.63.2
-gpd==1.1.1
-graphviz==0.20.3
-holoviews==1.19.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.65.0
 htbuilder==0.6.2
 httplib2==0.22.0
-hvplot==0.10.0
-hydralit-components==1.0.10
-idna==3.7
-imageio==2.34.2
-importlib_metadata==8.0.0
-importlib_resources==6.4.0
-iniconfig==2.0.0
+hydralit_components==1.0.10
+idna==3.8
 ipyevents==2.0.2
 ipyfilechooser==0.6.0
-ipyleaflet==0.18.2
-ipython==8.12.3
+ipyleaflet==0.19.2
+ipython==8.26.0
 ipytree==0.2.2
-ipywidgets==8.1.3
-itsdangerous==2.2.0
+ipywidgets==8.1.5
 jedi==0.19.1
 Jinja2==3.1.4
 joblib==1.4.2
-jsonschema==4.22.0
+jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-jupyterlab_pygments==0.3.0
-jupyterlab_widgets==3.0.11
+jupyter-leaflet==0.19.2
+jupyterlab_widgets==3.0.13
 kiwisolver==1.4.5
-lazy_loader==0.4
-linkify-it-py==2.0.3
 llvmlite==0.43.0
-loguru==0.6.0
-lxml==5.2.2
-Markdown==3.6
+lxml==5.3.0
+Mako==1.3.5
+Markdown==3.7
 markdown-it-py==3.0.0
 markdownlit==0.0.7
 MarkupSafe==2.1.5
-matplotlib==3.9.1
+matplotlib==3.9.2
 matplotlib-inline==0.1.7
-matplotlib-scalebar==0.8.1
-mdit-py-plugins==0.4.1
 mdurl==0.1.2
-mistune==3.0.2
-more-itertools==10.3.0
-nbclient==0.10.0
-nbconvert==7.16.4
-nbformat==5.10.4
-networkx==3.2.1
+more-itertools==10.4.0
+narwhals==1.5.5
 numba==0.60.0
-numpy==1.26.4
-oauth2client==4.1.3
-opencv-python-headless==4.10.0.84
+numpy==1.24.3
+optuna==3.6.1
 packaging==24.1
 pandas==2.2.2
-pandocfilters==1.5.1
-panel==1.4.4
-param==2.1.1
 parso==0.8.4
 pexpect==4.9.0
-pickleshare==0.7.5
-pillow==10.3.0
-pipreqs==0.5.0
-platformdirs==4.2.2
-plotly==5.22.0
-pluggy==1.5.0
+pillow==10.4.0
+plotly==5.24.0
 prometheus_client==0.20.0
 prompt_toolkit==3.0.47
 proto-plus==1.24.0
-protobuf==4.25.3
+protobuf==5.28.0
 ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==16.1.0
+pure_eval==0.2.3
+pyarrow==17.0.0
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
-pydantic==1.10.17
 pydeck==0.9.1
 Pygments==2.18.0
-pymdown-extensions==10.8.1
-pyparsing==3.1.2
+pymdown-extensions==10.9
+pyogrio==0.9.0
+pyparsing==3.1.4
 pyperclip==1.9.0
 pyproj==3.6.1
 pyshp==2.3.1
-pytest==8.2.2
 python-box==7.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
-pyviz_comms==3.0.2
-PyYAML==6.0.1
-pyzmq==26.1.0
+PyYAML==6.0.2
 ratelim==0.1.6
 referencing==0.35.1
 requests==2.32.3
-rich==13.7.1
-rpds-py==0.18.1
+rich==13.8.0
+rpds-py==0.20.0
 rsa==4.9
-scalebar==0.4.2
-scikit-image==0.24.0
 scikit-learn==1.5.1
-scipy==1.13.1
+scipy==1.14.1
 scooby==0.10.0
 seaborn==0.13.2
 shap==0.46.0
-shapely==2.0.4
+shapely==2.0.6
 six==1.16.0
 slicer==0.0.8
 smmap==5.0.1
-soupsieve==2.5
+soupsieve==2.6
+SQLAlchemy==2.0.32
 st-annotated-text==4.0.1
 st-theme==1.2.3
 stack-data==0.6.3
-streamlit==1.35.0
+streamlit==1.38.0
 streamlit-camera-input-live==0.2.0
 streamlit-card==1.0.2
 streamlit-embedcode==0.1.2
-streamlit-extras==0.4.3
+streamlit-extras==0.4.7
 streamlit-faker==0.0.3
 streamlit-image-coordinates==0.1.9
 streamlit-keyup==0.2.4
-streamlit-navigation-bar==3.3.0
 streamlit-option-menu==0.3.13
 streamlit-toggle-switch==1.0.2
 streamlit-vertical-slider==2.5.5
-svgwrite==1.4.3
-tabulate==0.8.10
-tenacity==8.4.2
+tenacity==8.5.0
 threadpoolctl==3.5.0
-tifffile==2024.7.2
-tinycss2==1.3.0
 toml==0.10.2
-tomli==2.0.1
-toolz==0.12.1
 tornado==6.4.1
-tqdm==4.66.4
+tqdm==4.66.5
 traitlets==5.14.3
 traittypes==0.2.1
-typing==3.7.4.3
 typing_extensions==4.12.2
 tzdata==2024.1
-uc-micro-py==1.0.3
 uritemplate==4.1.1
 urllib3==2.2.2
-validators==0.30.0
+validators==0.33.0
 wcwidth==0.2.13
-webencodings==0.5.1
-Werkzeug==3.0.4
-widgetsnbextension==4.0.11
+widgetsnbextension==4.0.13
 xyzservices==2024.6.0
-yarg==0.1.9
-zipp==3.19.2
-setuptools
-optuna~=3.6.1
